--- a/Janksy/Janksy/Janksy-Info.plist
+++ b/Janksy/Janksy/Janksy-Info.plist
@@ -20,6 +20,19 @@
 	<string>0.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>rfid</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>rfid</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>0.1</string>
 	<key>LSRequiresIPhoneOS</key>
